Added test for register and login